# openless

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Package.swift  README.en.md  README.md  README.zh.md  USAGE.md  appcast.xml
.github/: BUILD_TEST_REPORT.md  COOPER_CONTRIBUTION_STRATEGY.md  COOPER_README.md  COOPER_WORKFLOW.md  MULTI_SCALE_AUDIT.md  P1_TEST_REPORT.md  TEST_VERIFICATION.md  WATCHDOG_RISK_ANALYSIS.md
.github/audit-reports/system-level/: architecture-risk-map-20260504.md  system-audit-summary-20260504.md  tech-debt-matrix-20260504.md
.github/finding-reports/: asr-analysis-20260504.md  dependencies-20260504.md  finding-summary-20260504.md  test-coverage-20260504.md
.github/issues/: EPIC-001-testing-infrastructure.md  EPIC-002-asr-enhancement.md
.github/workflows/: ci.yml  claude.yml  pr-agent.yml  release-tauri.yml  update-cask.yml
Casks/: openless.rb
Formula/: openless.rb
Sources/OpenLessASR/: VolcengineASRProvider.swift
Sources/OpenLessApp/: AppDelegate.swift  DictationCoordinator.swift  MenuBarController.swift  OpenLessApp.swift  StatusBarIcon.swift
Sources/OpenLessApp/Capsule/: CapsuleWindowController.swift
Sources/OpenLessApp/Permissions/: TCCPermissionResetter.swift  VersionedPermissionRefresh.swift
Sources/OpenLessApp/Settings/: SettingsComponents.swift  SettingsView.swift  SettingsWindowController.swift  Sidebar.swift
Sources/OpenLessCore/: ASRProvider.swift  ASRProviderRegistry.swift
Sources/OpenLessPersistence/: CredentialsError.swift  CredentialsMigration.swift  CredentialsSchemaV1.swift  CredentialsVault.swift
Sources/OpenLessUI/: CapsuleView.swift
Tests/OpenLessASRTests/: VolcengineASRProviderTests.swift
Tests/OpenLessAppTests/: TCCPermissionResetterTests.swift  VersionedPermissionRefreshTests.swift
Tests/OpenLessCoreTests/: ASRProviderRegistryTests.swift
Tests/OpenLessPersistenceTests/: CredentialsMigrationTests.swift
docs/: 2026-05-02-windows-terminal-clipboard-restore-investigation.md  openless-development.md  qa-reasoning-roadmap.md  windows-tauri-test-agent-research.md  windows-upstream-pr-workflow.md
docs/github-tracking/: issue-98-startup-visible-ready.md  issue-windows-dual-hotkey-sources.md  pr-145-cold-start-first-paint.md  pr-154-windows-dual-hotkey.md
docs/release-notes/: 1.0.02.md  1.0.07.md
docs/superpowers/plans/: 2026-05-01-windows-temporary-tsf-ime.md  2026-05-06-windows-local-asr.md
docs/superpowers/specs/: 2026-05-01-windows-temporary-tsf-ime-design.md  2026-05-06-windows-local-asr-design.md
docs/windows-lifecycle-tracking/: issue-154-dual-hotkey-sources.md
docs/windows-ui-tracking/: issue-143-cold-start-ui.md
openless -all/: README.md
openless -all/app/: .gitignore  package-lock.json  package.json
openless -all/app/scripts/: build-mac.sh  windows-build-gnu.ps1  windows-preflight.ps1
openless -all/app/src/: App.tsx  main.tsx
openless -all/app/src-tauri/: Cargo.toml  tauri.conf.json
openless -all/design_handoff_openless/: pages.jsx
openless-all/: README.md
openless-all/app/: package-lock.json  package.json
openless-all/app/scripts/: build-mac.sh  windows-ime-build.ps1  windows-ime-install-smoke.ps1  windows-ime-register.ps1  windows-ime-unregister.ps1  windows-openless-lifecycle-e2e.py  windows-package-msvc.ps1  windows-package-msvc.test.mjs  windows-preflight.ps1  windows-real-asr-insertion-smoke.ps1  windows-real-regression.ps1  windows-smoke-suite.ps1  (+2 more)
openless-all/app/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
openless-all/app/src-tauri/capabilities/: default.json
openless-all/app/src-tauri/nsis/: openless-ime-hooks.nsh
openless-all/app/src-tauri/src/: audio_mute.rs  combo_hotkey.rs  commands.rs  coordinator.rs  hotkey.rs  insertion.rs  lib.rs  persistence.rs  polish.rs  qa_hotkey.rs  recorder.rs  selection.rs  shortcut_binding.rs  types.rs  windows_ime_ipc.rs  windows_ime_profile.rs  windows_ime_protocol.rs  windows_ime_session.rs
openless-all/app/src-tauri/src/asr/: mod.rs  volcengine.rs  whisper.rs
openless-all/app/src-tauri/src/asr/local/: cache.rs  download.rs  foundry.rs  foundry_provider.rs  foundry_runtime.rs  local_provider.rs  mod.rs  models.rs  qwen_engine.rs  test_run.rs
openless-all/app/src-tauri/wix/: openless-ime.wxs
scripts/: build-app.sh  bump-version.sh  release.sh
(+93 files in other folders)
